<resources>
    <string name="app_name">PRACTICA_FINAL</string>
    <string name="create_wish_list">Create wish list</string>
    <string name="select_wish_list">Select wish list</string>
    <string name="manage_friends">Manage friends</string>
    <string name="categories">Categories</string>
    <string name="first_name">first name</string>
    <string name="last_name">last name</string>
    <string name="email">e-mail</string>
    <string name="password">password</string>
    <string name="confirm_password">confirm password</string>
    <string name="back">back</string>
    <string name="register">register</string>
    <string name="new_password">new password</string>
    <string name="apply">apply</string>
    <string name="products">products</string>
    <string name="search">search</string>
    <string name="delete">delete</string>
    <string name="settings">settings</string>
    <string name="account">account</string>
    <string name="Authenticates">Authenticates</string>
    <string name="Privacity">Privacity</string>
    <string name="Help">Help</string>
    <string name="Exit">Exit</string>
    <string name="add">add</string>
    <string name="add_to_wishList">add to wishlist</string>
    <string name="my_presents">my presents</string>
    <string name="delete_from_wishList">delete from wishlist</string>
    <string name="details">details</string>
    <string name="book">book</string>
    <string name="edit">edit</string>
    <string name="send_message">send message</string>
    <string name="my_friends">my friends</string>
    <string name="my_friends_request">my friend requests</string>
    <string name="users">users</string>
    <string name="send">send</string>
    <string name="list_my_friends">List my friends</string>
    <string name="search_new_users">Search new users</string>
    <string name="delete_friends">Delete friends</string>
    <string name="search_user">Search user</string>
    <string name="login">Login</string>
    <string name="chat">Chat</string>
    <string name="incorrectCredentials">Incorrect credentials</string>
    <string name="create_Gift">Create Gift</string>
    <string name="get_Gifts">Get Gifts</string>
    <string name="edit_Gift">Edit Gift</string>
    <string name="reservation_Gift">Reservation Gift</string>
    <string name="delete_Gift">Delete Gift</string>
    <string name="search_gift">Search Gift</string>
    <string name="gifts">Gifts</string>
    <string name="search_gifts">Search Gifts</string>
    <string name="home">Home</string>
    <string name="NombreDato">Nombre</string>
    <string name="ApellidoDato">Apellido</string>
    <string name="emailDato">Email</string>
    <string name="PasswordDato">Password</string>
    <string name="MisDatos">Datos</string>
    <string name="Actualizar">Actualizar</string>
    <string name="LogOut">LogOut</string>
    <string name="message">message…</string>
    <string name="wishLists">Wish Lists</string>
    <string name="create">create</string>
    <string name="Done">Done</string>
    <string name="actualitzat">Data actualitzada</string>
    <string name="noActualitzat">Data no actualitzada</string>
    <string name="UpdateButton">Update</string>
    <string name="create_product">Create your product</string>
</resources>