<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/verde">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp"
        android:orientation="vertical">
        
        <TextView
            android:text="@string/MisDatos"
            android:layout_gravity="center"
            android:textSize="25sp"
            android:textColor="#000"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:src="@drawable/user_icon"/>
        <TextView
            android:id="@+id/Nombre"
            android:text="@string/NombreDato"
            android:textSize="18sp"
            android:textColor="#000"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/Apellido"
            android:text="@string/ApellidoDato"
            android:textSize="18sp"
            android:textColor="#000"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/Email"
            android:text="@string/emailDato"
            android:textSize="18sp"
            android:textColor="#000"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/Password"
            android:text="@string/PasswordDato"
            android:textSize="18sp"
            android:textColor="#000"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/Actualizar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Actualizar"
            android:background="@drawable/shape"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@id/Password"
            app:layout_constraintStart_toStartOf="@id/Password"
            android:layout_marginTop="70dp" />

        <Button
            android:id="@+id/Logout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="200dp"
            android:background="@drawable/shape"
            android:text="@string/LogOut"
            android:textColor="@color/black"
            app:layout_constraintStart_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/Actualizar" />

    </androidx.appcompat.widget.LinearLayoutCompat>


</ScrollView>