<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/verde"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="142dp"
        android:layout_height="135dp"
        app:srcCompat="@drawable/logo"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="50dp"
        />

    <TextView
        android:id="@+id/passwordTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_password"
        app:layout_constraintTop_toBottomOf="@id/imageView"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="20dp"/>

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:singleLine="true"
        android:hint="@string/new_password"
        app:layout_constraintTop_toBottomOf="@id/passwordTv"
        app:layout_constraintStart_toStartOf="@id/passwordTv"
        android:layout_marginTop="5dp"/>

    <TextView
        android:id="@+id/confirmPasswordTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirm_password"
        app:layout_constraintTop_toBottomOf="@id/passwordEditText"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="20dp"/>

    <EditText
        android:id="@+id/confirmPasswordEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:singleLine="true"
        android:hint="@string/confirm_password"
        app:layout_constraintTop_toBottomOf="@id/confirmPasswordTv"
        app:layout_constraintStart_toStartOf="@id/confirmPasswordTv"
        android:layout_marginTop="5dp"/>

    <Button
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/back"
        android:background="@drawable/shape"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@id/confirmPasswordEditText"
        app:layout_constraintTop_toBottomOf="@id/confirmPasswordEditText"
        app:rippleColor="@color/black" />

    <Button
        android:id="@+id/registerButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:background="@drawable/shape"
        android:textColor="@color/black"
        app:layout_constraintTop_toTopOf="@id/backButton"
        app:layout_constraintStart_toEndOf="@id/backButton"
        android:layout_marginLeft="100dp"
        />

    <include
        layout="@layout/menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="10dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>