<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/verde">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/my_friends_request"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:paddingTop="15dp"
        android:paddingLeft="130dp"
        android:paddingRight="130dp"
        android:paddingBottom="15dp"
        android:layout_marginTop="15dp"
        android:background="@color/white"
        />


    <EditText
        android:id="@+id/searchUser"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/shape"
        android:text="@string/search_user"
        android:textAlignment="center"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title"
        android:layout_marginLeft="15dp"
        app:rippleColor="@color/black" />

    <Button
        android:id="@+id/searchButton"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:background="@drawable/shape"
        android:text="@string/search"
        android:textColor="@color/black"
        app:layout_constraintStart_toEndOf="@id/searchUser"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/searchUser"
        app:rippleColor="@color/black" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/searchRequestsRV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/searchUser"
        app:layout_constraintStart_toStartOf="@id/searchUser"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="25dp"
        />

    <include
        layout="@layout/bottom_menu_fragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="10dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>